articles1/1336908
Path: news.gmane.org!not-for-mail
From: Randy Dunlap <rdunlap@xenotime.net>
Newsgroups: gmane.linux.drivers.platform.x86.devel,gmane.linux.kernel.next,gmane.linux.kernel
Subject: Re: linux-next: Tree for Aug 2 (drivers/platform/x86/apple-gmux.c)
Date: Thu, 02 Aug 2012 09:35:14 -0700
Lines: 63
Approved: news@gmane.org
Message-ID: <501AAC42.4030103@xenotime.net>
References: <20120802141505.d30da7f7113e955679383acb@canb.auug.org.au> <501AA5A8.1070607@xenotime.net> <20120802161504.GG32395@thinkpad-t410> <501AA892.70207@xenotime.net> <20120802163154.GH32395@thinkpad-t410>
NNTP-Posting-Host: plane.gmane.org
Mime-Version: 1.0
Content-Type: text/plain; charset=ISO-8859-1
Content-Transfer-Encoding: 7bit
X-Trace: dough.gmane.org 1343925414 19904 80.91.229.3 (2 Aug 2012 16:36:54 GMT)
X-Complaints-To: usenet@dough.gmane.org
NNTP-Posting-Date: Thu, 2 Aug 2012 16:36:54 +0000 (UTC)
To: Stephen Rothwell <sfr@canb.auug.org.au>,
	linux-next@vger.kernel.org, LKML <linux-kernel@vger.kernel.org>,
	Matthew Garrett <mjg@redhat.com>,
	platform-driver-x86@vger.kernel.org
Original-X-From: platform-driver-x86-owner@vger.kernel.org Thu Aug 02 18:36:53 2012
Return-path: <platform-driver-x86-owner@vger.kernel.org>
Envelope-to: gldpxd-platform-driver-x86@plane.gmane.org
Original-Received: from vger.kernel.org ([209.132.180.67])
	by plane.gmane.org with esmtp (Exim 4.69)
	(envelope-from <platform-driver-x86-owner@vger.kernel.org>)
	id 1SwyOH-0007So-Ts
	for gldpxd-platform-driver-x86@plane.gmane.org; Thu, 02 Aug 2012 18:36:50 +0200
Original-Received: (majordomo@vger.kernel.org) by vger.kernel.org via listexpand
	id S1754028Ab2HBQga (ORCPT
	<rfc822;gldpxd-platform-driver-x86@m.gmane.org>);
	Thu, 2 Aug 2012 12:36:30 -0400
Original-Received: from oproxy7-pub.bluehost.com ([67.222.55.9]:59104 "HELO
	oproxy7-pub.bluehost.com" rhost-flags-OK-OK-OK-OK) by vger.kernel.org
	with SMTP id S1752411Ab2HBQg2 (ORCPT
	<rfc822;platform-driver-x86@vger.kernel.org>);
	Thu, 2 Aug 2012 12:36:28 -0400
Original-Received: (qmail 627 invoked by uid 0); 2 Aug 2012 16:36:27 -0000
Original-Received: from unknown (HELO box742.bluehost.com) (66.147.244.242)
  by oproxy7.bluehost.com with SMTP; 2 Aug 2012 16:36:26 -0000
DKIM-Signature: v=1; a=rsa-sha256; q=dns/txt; c=relaxed/relaxed; d=xenotime.net; s=default;
	h=Content-Transfer-Encoding:Content-Type:In-Reply-To:References:Subject:To:MIME-Version:From:Date:Message-ID; bh=UT9U7A+YQ0wlfYJoj2jApgZx6goxq8YkwIpZrMwpp5E=;
	b=NOhTQ17FBf9A+jqwToaJ3+IezPimY2f57DGYtpQCsmHmdYdMxi6rG6dQFMjLByqvzuf3FxvtpESArTFF4ndL3J3/qSdfQLZwkrxsuIurxG/pSdlK+30HPQBYoePA6J2f;
Original-Received: from [50.53.38.135] (port=42793 helo=[192.168.1.2])
	by box742.bluehost.com with esmtpsa (TLSv1:CAMELLIA256-SHA:256)
	(Exim 4.76)
	(envelope-from <rdunlap@xenotime.net>)
	id 1SwyNu-0004Kz-BO; Thu, 02 Aug 2012 10:36:26 -0600
User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.2.15) Gecko/20110323 Thunderbird/3.1.9
In-Reply-To: <20120802163154.GH32395@thinkpad-t410>
X-Identified-User: {1807:box742.bluehost.com:xenotime:xenotime.net} {sentby:smtp auth 50.53.38.135 authed with rdunlap@xenotime.net}
Original-Sender: platform-driver-x86-owner@vger.kernel.org
Precedence: bulk
List-ID: <platform-driver-x86.vger.kernel.org>
X-Mailing-List: platform-driver-x86@vger.kernel.org
Xref: news.gmane.org gmane.linux.drivers.platform.x86.devel:3702 gmane.linux.kernel.next:23592 gmane.linux.kernel:1336908
Archived-At: <http://permalink.gmane.org/gmane.linux.kernel/1336908>

On 08/02/2012 09:31 AM, Seth Forshee wrote:

> On Thu, Aug 02, 2012 at 09:19:30AM -0700, Randy Dunlap wrote:
>> On 08/02/2012 09:15 AM, Seth Forshee wrote:
>>
>>> On Thu, Aug 02, 2012 at 09:07:04AM -0700, Randy Dunlap wrote:
>>>> On 08/01/2012 09:15 PM, Stephen Rothwell wrote:
>>>>
>>>>> Hi all,
>>>>>
>>>>> Please do not add anything to linux-next included branches/series that is
>>>>> destined for v3.7 until after v3.6-rc1 is released.
>>>>>
>>>>> Reminder: do not rebase your branches before asking Linus to pull them ...
>>>>>
>>>>> Changes since 20120731:
>>>>>
>>>>
>>>>
>>>> when CONFIG_ACPI is not enabled: (on i386)
>>>>
>>>> drivers/platform/x86/apple-gmux.c: In function 'gmux_probe':
>>>> drivers/platform/x86/apple-gmux.c:196:2: error: implicit declaration of function 'acpi_video_dmi_promote_vendor'
>>>> drivers/platform/x86/apple-gmux.c: In function 'gmux_remove':
>>>> drivers/platform/x86/apple-gmux.c:219:2: error: implicit declaration of function 'acpi_video_dmi_demote_vendor'
>>>>
>>>>
>>>> Full randconfig file is attached.
>>>
>>> I sent Matthew a patch that should fix this [1], but he doesn't seem to
>>> have picked it up yet.
>>>
>>> Seth
>>>
>>> [1] https://lkml.org/lkml/2012/7/2/257
>>>
>>
>>
>> That patch does not fix this build error.
>> There is still an implicit assumption in Kconfig and
>> the driver source that ACPI is enabled.
> 
> The functions in question are built or not based off of ACPI_VIDEO,
> which in turn depends on ACPI. So if ACPI=n, then ACPI_VIDEO=n and you
> can't configure APPLE_GMUX=(m|y). Is that right, or am I missing
> something?


This?

config APPLE_GMUX
	tristate "Apple Gmux Driver"
	depends on PNP
	depends on BACKLIGHT_CLASS_DEVICE
	depends on BACKLIGHT_APPLE=n || BACKLIGHT_APPLE
	depends on ACPI_VIDEO=n || ACPI_VIDEO
	^^^^^^^^^^^^^^^^^^^^^^^




-- 
~Randy
